--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- prima row -->
       <div class="row">
         <h1>Lezioni dove vuoi tu</h1>
-        <div class="col-xs-12 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-md-6 col-lg-6 spazio-box">
 
           <img src="img/icon/maps.png" alt="">
           <h3>A casa tua</h3>
@@ -39,14 +39,14 @@
         <!-- seconda row -->
         <div class="row">
           <h1>Come Funziona</h1>
-          <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="col-xs-12 col-md-6 col-lg-4 spazio-box">
 
             <img src="img/search.svg" alt="">
             <h3>Cerca</h3>
             Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti
 
           </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="col-xs-12 col-md-6 col-lg-4 spazio-box">
 
             <img src="img/letter.svg" alt="">
             <h3>Contatta</h3>
